基本レイアウトパーツ前半部分のレビューをお願い致します。

--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -21,15 +21,15 @@
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
         <div class="q4">
-          <div>
-            <div>固定</div>
-            <div>可変</div>
-            <div>固定</div>
+          <div class="q4_contents">
+            <div class="q4_contents_1 is-common">固定</div>
+            <div class="q4_contents_2 is-common">可変</div>
+            <div class="q4_contents_3 is-common">固定</div>
           </div>
-          <div>
-            <div>可変</div>
-            <div>可変</div>
-            <div>固定</div>
+          <div class="q4_contents">
+            <div class="q4_contents_4 is-common">可変</div>
+            <div class="q4_contents_5 is-common">可変</div>
+            <div class="q4_contents_6 is-common">固定</div>
           </div>
         </div>
         <!-- 回答はクラスq4の要素の中に書いてね -->
