--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -25,16 +25,16 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <div>
-                <p>text-align</p>
+              <div class="q6__box_contents">
+                <p class="q6__box_contents_text">text-align</p>
               </div>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
 
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box">
-              <p>margin</p>
+            <div class="q6__box is-margin">
+              <p class="q6__box_contents_text">margin</p>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
           </div>
@@ -47,9 +47,9 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around">
-            <div>
-              <p>table</p>
+          <div class="q6 q6--around is_table">
+            <div class="q6_box_table">
+              <p class="q6_text">table</p>
             </div>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
@@ -57,8 +57,8 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around">
-            <p>flex</p>
+          <div class="q6 q6--around is-flex">
+            <p class="q6_text q6_flex_text">flex</p>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
 
