--- a/layout_parts/q5/index.html
+++ b/layout_parts/q5/index.html
@@ -21,15 +21,15 @@
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
         <div class="q5">
-          <div>8</div>
-          <div>5</div>
-          <div>1</div>
-          <div>7</div>
-          <div>4</div>
-          <div>6</div>
-          <div>2</div>
-          <div>3</div>
-          <div>9</div>
+          <div class="q5_contents_8 is-common">8</div>
+          <div class="q5_contents_5 is-common">5</div>
+          <div class="q5_contents_1 is-common">1</div>
+          <div class="q5_contents_7 is-common">7</div>
+          <div class="q5_contents_4 is-common">4</div>
+          <div class="q5_contents_6 is-common">6</div>
+          <div class="q5_contents_2 is-common">2</div>
+          <div class="q5_contents_3 is-common">3</div>
+          <div class="q5_contents_9">9</div>
         </div>
         <!-- 回答はクラスq5の要素の中に書いてね -->
       </div>
