指摘部分を修正しましたのでご確認よろしくお願い致します。

--- a/layout_parts/q3/index.html
+++ b/layout_parts/q3/index.html
@@ -27,7 +27,7 @@
                 <th>朝ごはん</th>
                 <th>昼ごはん</th>
                 <th>おやつ</th>
-                <th>夜ごはん</th>
+                <th>夜ご飯</th>
                 <th>夜食</th>
               </tr>
             </thead>
@@ -38,7 +38,7 @@
                 <td>チャーハン</td>
                 <td>杏仁豆腐</td>
                 <td>舞茸丼</td>
-                <td>イチゴ</td>
+                <td>いちご</td>
               </tr>
               <tr>
                 <th>2016/04/02</th>
@@ -46,15 +46,15 @@
                 <td>ケバブ丼</td>
                 <td>ゼリー</td>
                 <td>唐揚げ定食</td>
-                <td>イチゴ</td>
+                <td>いちご</td>
               </tr>
               <tr>
                 <th>2016/04/03</th>
                 <td>納豆ご飯</td>
-                <td>マグロ定食</td>
+                <td>まぐろ定食</td>
                 <td>チョコパン</td>
                 <td>餃子定食</td>
-                <td>イチゴ</td>
+                <td>チョコ</td>
               </tr>
               <tr>
                 <th>2016/04/04</th>
@@ -66,13 +66,14 @@
               </tr>
               <tr>
                 <th>合計カロリー</th>
-                <td>10000ckal</td>
-                <td>12000ckal</td>
-                <td>3000ckal</td>
-                <td>30000ckal</td>
-                <td>1000ckal</td>
+                <td>10000kcal</td>
+                <td>12000kcal</td>
+                <td>3000kcal</td>
+                <td>30000kcal</td>
+                <td>1000kcal</td>
               </tr>
             </tbody>
+          </table>
         </div>
         <!-- 回答はクラスq3の要素の中に書いてね -->
       </div>
