--- a/layout_parts/q5/index.html
+++ b/layout_parts/q5/index.html
@@ -29,7 +29,7 @@
           <div class="q5_contents_6 is-common">6</div>
           <div class="q5_contents_2 is-common">2</div>
           <div class="q5_contents_3 is-common">3</div>
-          <div class="q5_contents_9">9</div>
+          <div class="q5_contents_9 is-common">9</div>
         </div>
         <!-- 回答はクラスq5の要素の中に書いてね -->
       </div>
