--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -25,7 +25,7 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <div class="q6__box_contents">
+              <div class="q6__box_contents is-text-align">
                 <p class="q6__box_contents_text">text-align</p>
               </div>
             </div>
@@ -67,7 +67,7 @@
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box is-stable">
-              <p class="q6__box__inner">position固定</p>
+              <p class="q6__box__inner q6_box_text">position固定</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
 
@@ -75,7 +75,7 @@
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box is-flexible">
-              <p class="q6__box__inner">position可変</p>
+              <p class="q6__box__inner q6_box_text">position可変</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
           </div>
