--- a/layout_parts/q2/index.html
+++ b/layout_parts/q2/index.html
@@ -22,7 +22,7 @@
         <div class="q2 q2_content clearfix">
           <div class="q2_content_box">
             <div class="q2_img is_left">
-              <img src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q2/thumb_1.jpg" alt width="200" height="133">
+              <img src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q2/thumb_1.jpg" alt="picture" class="img_form">
             </div>
             <p class="q2_content_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             <br>
@@ -31,7 +31,7 @@
           </div>
           <div class="q2_content_box">
             <div class="q2_img is_right">
-              <img src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q2/thumb_2.jpg" alt width="200" height="133">
+              <img src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q2/thumb_2.jpg" alt="picture" class="img_form">
             </div>
             <p class="q2_content_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             <br>
