--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -22,14 +22,14 @@
         <!-- 新たにタグは追加しなくてもできます。 -->
         <div class="q4">
           <div class="q4_contents">
-            <div class="q4_contents_1 is-common">固定</div>
-            <div class="q4_contents_2 is-common">可変</div>
-            <div class="q4_contents_3 is-common">固定</div>
+            <div class="q4_contents_pink is-common">固定</div>
+            <div class="q4_contents_purple is-common">可変</div>
+            <div class="q4_contents_blue is-common">固定</div>
           </div>
           <div class="q4_contents">
-            <div class="q4_contents_4 is-common">可変</div>
-            <div class="q4_contents_5 is-common">可変</div>
-            <div class="q4_contents_6 is-common">固定</div>
+            <div class="q4_contents_yellow is-common">可変</div>
+            <div class="q4_contents_red is-common">可変</div>
+            <div class="q4_contents_green is-common">固定</div>
           </div>
         </div>
         <!-- 回答はクラスq4の要素の中に書いてね -->
